# temp

./: .gitignore  Dockerfile  Makefile  keep-docker-awake.sh  main.py  pyproject.toml  requirements.txt  zlota.ipynb
code/: CONFIG.py  fetch_data.py  sql_worker.py
code/sql/: temp.sql
